PKS-NSX-T-Integration/K8S-Ingress-Controller/coffee-svc.yml
apiVersion: v1

kind: Service

metadata:

  name: coffee-svc

  labels:

    app: coffee

spec:

  ports:

  - port: 80

    targetPort: 80

    protocol: TCP

    name: http

  selector:

    app: coffee
