PKS-NSX-T-Integration/K8S-Ingress-Controller/tea-svc.yml
apiVersion: v1

kind: Service

metadata:

  name: tea-svc

  labels:

    app: tea

spec:

  ports:

  - port: 80

    targetPort: 80

    protocol: TCP

    name: http

  selector:

    app: tea
