PKS-NSX-T-Integration/K8S-Ingress-Controller/coffee-ingress-http-no-host.yml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:

  name: cafe-ingress

spec:

  rules:

  - http:

      paths:

      - path: /tea

        backend:

          serviceName: tea-svc

          servicePort: 80

      - path: /coffee

        backend:

          serviceName: coffee-svc

          servicePort: 80
